Feature/search
Add search functionality to playlist GET routes and dedicated search route.
